feat: integrate supremeai learning loop, zero-hardcode registry, and dashboard synchronization